Remove JWT authentication - simplified to username/password only
Changes:
- Removed JJWT dependencies from pom.xml
- Removed JWT filter and token generation from AuthController
- Simplified SecurityConfig - removed JWT filter chain
- Updated login endpoint to return user info instead of JWT token
- Replaced JwtUtils with deprecation stub
- SecurityConfig now permits all requests to /api/auth/**
- Session-based authentication disabled (stateless mode maintained)

Dependencies verified: No known CVEs found