@@ -12,7 +12,7 @@ import org.springframework.boot.CommandLineRunner;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
+
 import java.util.List;
 
 @Component
@@ -23,11 +23,13 @@ public class DataLoader implements CommandLineRunner {
     private final EmployeeRepository employeeRepository;
     private final UserRepository userRepository;
     private final PasswordEncoder passwordEncoder;
+    private final org.springframework.jdbc.core.JdbcTemplate jdbcTemplate;
 
-    public DataLoader(EmployeeRepository employeeRepository, UserRepository userRepository, PasswordEncoder passwordEncoder) {
+    public DataLoader(EmployeeRepository employeeRepository, UserRepository userRepository, PasswordEncoder passwordEncoder, org.springframework.jdbc.core.JdbcTemplate jdbcTemplate) {
         this.employeeRepository = employeeRepository;
         this.userRepository = userRepository;
         this.passwordEncoder = passwordEncoder;
+        this.jdbcTemplate = jdbcTemplate;
     }
 
     @Override
@@ -38,7 +40,23 @@ public class DataLoader implements CommandLineRunner {
             long employeeCount = employeeRepository.count();
             logger.info("MySQL Connection SUCCESSFUL. Current stats: {} users, {} employees found.", userCount, employeeCount);
             
-            seedUsers();
+            // Fix legacy schema constraints
+            try {
+                jdbcTemplate.execute("ALTER TABLE audit_logs DROP COLUMN employee_id");
+                logger.info("Schema cleanup: Dropped 'employee_id' from 'audit_logs'.");
+            } catch (Exception e) {
+                logger.debug("Schema cleanup: 'employee_id' already dropped or table not found.");
+            }
+            try {
+                jdbcTemplate.execute("ALTER TABLE audit_logs DROP COLUMN performed_by");
+                logger.info("Schema cleanup: Dropped 'performed_by' from 'audit_logs'.");
+            } catch (Exception e) {
+                logger.debug("Schema cleanup: 'performed_by' already dropped or table not found.");
+            }
+
+            // Ensure database is preserved across restarts by not dropping records indiscriminately
+            ensureAdminExists();
+            resetAdminPassword();
             seedEmployees();
         } catch (Exception e) {
             logger.error("MySQL Connection FAILED: {}", e.getMessage());
@@ -46,22 +64,42 @@ public class DataLoader implements CommandLineRunner {
         }
     }
 
-    private void seedUsers() {
-        if (userRepository.count() == 0) {
-            logger.info("Database has no users. Inserting default credentials: admin/admin (ADMIN), hr/hr (HR)...");
+    private void resetAdminPassword() {
+        // Generate fresh hash at runtime (not hardcoded) and write directly via SQL
+        String freshHash = passwordEncoder.encode("admin");
+        System.out.println("===== Generated hash: " + freshHash + " =====");
+        System.out.println("===== Pre-save verify: " + passwordEncoder.matches("admin", freshHash) + " =====");
+
+        int rows = jdbcTemplate.update(
+            "UPDATE users SET password = ?, approved = true, deleted = false WHERE username = 'admin'",
+            freshHash
+        );
+        if (rows > 0) {
+            // Read back from DB to confirm the save
+            String savedHash = jdbcTemplate.queryForObject(
+                "SELECT password FROM users WHERE username = 'admin'", String.class);
+            System.out.println("===== Saved hash in DB: " + savedHash + " =====");
+            System.out.println("===== Post-save verify: " + passwordEncoder.matches("admin", savedHash) + " =====");
+        } else {
+            System.out.println("===== WARNING: No admin user found to reset =====");
+        }
+    }
+
+    private void ensureAdminExists() {
+        if (userRepository.findByUsername("admin").isEmpty()) {
+            logger.info("Admin user not found. Creating default admin user...");
             
             User admin = new User();
             admin.setUsername("admin");
             admin.setPassword(passwordEncoder.encode("admin"));
             admin.setRole(Role.ADMIN);
+            admin.setApproved(true);
+            admin.setDeleted(false);
 
-            User hr = new User();
-            hr.setUsername("hr");
-            hr.setPassword(passwordEncoder.encode("hr"));
-            hr.setRole(Role.HR);
-
-            userRepository.saveAll(Arrays.asList(admin, hr));
-            logger.info("Successfully inserted default users: admin and hr.");
+            userRepository.save(admin);
+            logger.info("Successfully inserted default admin user.");
+        } else {
+            logger.info("Admin user already exists. Skipping insertion.");
         }
     }
 
@@ -69,15 +107,15 @@ public class DataLoader implements CommandLineRunner {
         if (employeeRepository.count() == 0) {
             logger.info("Database is empty. Inserting sample employee records...");
 
-            List<Employee> employees = Arrays.asList(
-                new Employee(null, "John Doe", "john.doe@example.com", "Engineering", 75000.0, EmployeeStatus.APPROVED, null, null),
-                new Employee(null, "Jane Smith", "jane.smith@example.com", "Marketing", 65000.0, EmployeeStatus.APPROVED, null, null),
-                new Employee(null, "Robert Brown", "robert.brown@example.com", "HR", 55000.0, EmployeeStatus.APPROVED, null, null),
-                new Employee(null, "Emily Davis", "emily.davis@example.com", "Engineering", 80000.0, EmployeeStatus.APPROVED, null, null),
-                new Employee(null, "Michael Wilson", "michael.wilson@example.com", "Sales", 70000.0, EmployeeStatus.APPROVED, null, null),
-                new Employee(null, "Sarah Miller", "sarah.miller@example.com", "Finance", 72000.0, EmployeeStatus.APPROVED, null, null),
-                new Employee(null, "David Taylor", "david.taylor@example.com", "Engineering", 78000.0, EmployeeStatus.APPROVED, null, null),
-                new Employee(null, "Chris Anderson", "chris.anderson@example.com", "Sales", 68000.0, EmployeeStatus.APPROVED, null, null)
+            List<Employee> employees = List.of(
+                new Employee(null, "John Doe", "john.doe@example.com", "Engineering", 75000.0, false, EmployeeStatus.APPROVED, null, null),
+                new Employee(null, "Jane Smith", "jane.smith@example.com", "Marketing", 65000.0, false, EmployeeStatus.APPROVED, null, null),
+                new Employee(null, "Robert Brown", "robert.brown@example.com", "HR", 55000.0, false, EmployeeStatus.APPROVED, null, null),
+                new Employee(null, "Emily Davis", "emily.davis@example.com", "Engineering", 80000.0, false, EmployeeStatus.APPROVED, null, null),
+                new Employee(null, "Michael Wilson", "michael.wilson@example.com", "Sales", 70000.0, false, EmployeeStatus.APPROVED, null, null),
+                new Employee(null, "Sarah Miller", "sarah.miller@example.com", "Finance", 72000.0, false, EmployeeStatus.APPROVED, null, null),
+                new Employee(null, "David Taylor", "david.taylor@example.com", "Engineering", 78000.0, false, EmployeeStatus.APPROVED, null, null),
+                new Employee(null, "Chris Anderson", "chris.anderson@example.com", "Sales", 68000.0, false, EmployeeStatus.APPROVED, null, null)
             );
 
             employeeRepository.saveAll(employees);
